src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.dark {
    @apply bg-gray-800 text-zinc-50
}

.top-navigation-icon,.footer-icon {
    @apply text-gray-500
    mr-3 ml-4
    transition duration-300 ease-in-out 
    hover:text-[#08D9D6]
    dark:hover:text-[#F49D1A]
    cursor-pointer;
  }

